#11 inline StringUtils.isBlank() check